@@ -1,17 +1,15 @@
 ##  ********************************************
 ##  Coppermine Photo Gallery
 ##  ************************
-##  Copyright (c) 2003-2016 Coppermine Dev Team
 ##  v1.0 originally written by Gregory Demar
 ##
-##  This program is free software; you can redistribute it and/or modify
-##  it under the terms of the GNU General Public License version 3
-##  as published by the Free Software Foundation.
+##  @copyright  Copyright (c) 2003-2018 Coppermine Dev Team
+##  @license    GNU General Public License version 3 or later; see LICENSE
 ##
 ##  ********************************************
-##  Coppermine version: 1.6.03
-##  $HeadURL$
-####  ********************************************
+##  sql/schema.sql
+##  @since  1.6.05
+##  ********************************************
 
 #
 # Table structure for table CPG_albums
